--- a/volumes/lembrador-contas/src/views/table/tableList.ejs
+++ b/volumes/lembrador-contas/src/views/table/tableList.ejs
@@ -3,12 +3,12 @@
     <body>
         <%- template.navbar %>
             <div class="container">
+                <div class="float-right">
+                    <form class="form-inline my-2 my-lg-0">
+                        <a href='/tables/new' class="btn btn-outline-success my-2 my-sm-0">Novo</a>
+                    </form>
+                </div>
                 <div class="starter-template">
-                    <div class="float-right">
-                        <form class="form-inline my-2 my-lg-0">
-                            <a href='/tables/new' class="btn btn-outline-success my-2 my-sm-0">Novo</a>
-                        </form>
-                    </div>
                     <div>
                         <h1 class="title-1">
                             <%= title %>
@@ -32,8 +32,16 @@
                                             <%= statusEnum[table.status] %>
                                         </td>
                                         <td>
-                                            <a href='/tables/edit/<%= table._id %>'>Editar</a>
-                                            <a href='/tables/remove/<%= table._id %>'>Excluir</a>
+                                            <a href='/tables/edit/<%= table._id %>'>
+                                                <span class="material-symbols-outlined">
+                                                edit
+                                                </span>
+                                            </a>
+                                            <a href='/tables/remove/<%= table._id %>'>
+                                                <span class="material-symbols-outlined">
+                                                delete
+                                                </span>
+                                            </a>
                                         </td>
                                     </tr>
                                     <%})%>
