--- a/volumes/lembrador-contas/src/views/api/apiList.ejs
+++ b/volumes/lembrador-contas/src/views/api/apiList.ejs
@@ -3,12 +3,12 @@
     <body>
         <%- template.navbar %>
             <div class="container">
+                <div class="float-right">
+                    <form class="form-inline my-2 my-lg-0">
+                        <a href='/apis/new' class="btn btn-outline-success my-2 my-sm-0">Novo</a>
+                    </form>
+                </div>
                 <div class="starter-template">
-                    <div class="float-right">
-                        <form class="form-inline my-2 my-lg-0">
-                            <a href='/apis/new' class="btn btn-outline-success my-2 my-sm-0">Novo</a>
-                        </form>
-                    </div>
                     <div>
                         <h1 class="title-1">
                             <%= title %>
@@ -32,8 +32,18 @@
                                             <%= statusEnum[api.status] %>
                                         </td>
                                         <td>
-                                            <a href='/apis/edit/<%= api._id %>'>Editar</a>
-                                            <a href='/apis/remove/<%= api._id %>'>Excluir</a>
+                                            <td>
+                                                <a href='/apis/edit/<%= api._id %>'>
+                                                    <span class="material-symbols-outlined">
+                                                    edit
+                                                    </span>
+                                                </a>
+                                                <a href='/apis/remove/<%= api._id %>'>
+                                                    <span class="material-symbols-outlined">
+                                                    delete
+                                                    </span>
+                                                </a>
+                                            </td>
                                         </td>
                                     </tr>
                                     <%})%>
