--- a/volumes/lembrador-contas/src/views/email/editEmail.ejs
+++ b/volumes/lembrador-contas/src/views/email/editEmail.ejs
@@ -1,4 +1,4 @@
-<%- template.head %>
+<%- include ('../partials/header.ejs') %>
 
     <body>
         <%- template.navbar %>
@@ -54,8 +54,6 @@
                 </div>
             </div>
             <%- template.scripts %>
-            <script>
-            </script>
     </body>
 
     </html>
