--- a/volumes/lembrador-contas/src/views/dashboard/dashboard.ejs
+++ b/volumes/lembrador-contas/src/views/dashboard/dashboard.ejs
@@ -1,16 +1,21 @@
-<%- template.head %>
+<%- include ('../partials/header.ejs') %>
 
     <body>
         <%- template.navbar %>
             <div class="container">
                 <div class="float-right small">Último processamento:
-                    <span data-mask="00/00/0000 00:00:00"><%= activeBillList[0].updated_at.toLocaleString() %></span>
+                    <span data-mask="00/00/0000 00:00:00"><%= activeBillData.lastUpdate.toLocaleString() %></span>
                 </div>
                 <div class="starter-template">
                     <h1 class="title-1">
                         <%= title %>
                     </h1>
                     <br>
+                    <br>
+                    <h2>Julho/2023</h2>
+                    <div class="float-right">Total:
+                        <span class="money font-weight-bold"><%= Number(activeBillData.totalValue).toFixed(2) %></span>
+                    </div>
                     <div class="table-responsive">
                         <table class="table">
                             <thead>
@@ -22,16 +27,16 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <% activeBillList.forEach(function(bill){ %>
+                                <% activeBillData.billList.forEach(function(bill){ %>
                                     <tr>
                                         <td>
                                             <%= bill.name %>
                                         </td>
                                         <td>
-                                            <span class="date" data-mask="00/00/0000"><%= bill.dueDate.toLocaleString() %></span>
+                                            <span class="date" data-mask="00/00/0000"><%= bill.dueDate ? bill.dueDate.toLocaleString() : '' %></span>
                                         </td>
                                         <td>
-                                            <span class="money"><%= Number(bill.value).toFixed(2) %></span>
+                                            <span class="money"><%= bill.value ? Number(bill.value).toFixed(2) : '' %></span>
                                         </td>
                                         <td>
                                             <span"><%= activeBillStatusEnum[bill.status] %></span>
