--- a/volumes/lembrador-contas/src/views/templates/navbar.html
+++ b/volumes/lembrador-contas/src/views/templates/navbar.html
@@ -6,19 +6,11 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuários</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="/users/list">Listar</a>
-            <a class="dropdown-item" href="/users/new">Cadastrar</a>
-        </div>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/list" id="dropdown01">Usuários</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contas</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="/bills/list">Listar</a>
-            <a class="dropdown-item" href="/bills/new">Cadastrar</a>
-        </div>
+      <li class="nav-item">
+        <a class="nav-link" href="/bills/list" id="dropdown01">Contas</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Fontes de Dados</a>
