Bill status symbol change

--- a/volumes/lembrador-contas/src/views/dashboard/dashboard.ejs
+++ b/volumes/lembrador-contas/src/views/dashboard/dashboard.ejs
@@ -42,11 +42,11 @@
                                             <td>
                                                 <% if (activeBillStatusEnum[bill.status] == activeBillStatusEnum.PAID){ %>
                                                 <span class="material-symbols-outlined symbol-blue">
-                                                    attach_money
+                                                    done
                                                 </span>
                                                 <%} else {%>
                                                 <span class="material-symbols-outlined symbol-red">
-                                                    paid
+                                                    attach_money
                                                 </span>
                                             </td>
                                             <%}%>
