--- a/volumes/lembrador-contas/src/views/partials/header.ejs
+++ b/volumes/lembrador-contas/src/views/partials/header.ejs
@@ -8,6 +8,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/app.webmanifest" />
     <title><%= typeof title !='undefined' ? title : 'Lembrador de Contas' %></title>
 </head>
