--- a/volumes/lembrador-contas/src/views/templates/navbar.html
+++ b/volumes/lembrador-contas/src/views/templates/navbar.html
@@ -1,5 +1,22 @@
+<div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center" style="height: 200px;display:none!important" id="notifications-toast-container">
+  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="notifications-toast">
+    <div class="toast-header">
+      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close" onclick="hideNotificationsToast()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="toast-body">
+      Clique para permitir as notificações.
+      <div class="mt-2 pt-2 border-top">
+        <button type="button" class="btn btn-primary btn-sm" onclick="requestNotificationPermission()" data-dismiss="toast">Permitir</button>
+        <button type="button" class="btn btn-secondary btn-sm" data-dismiss="toast" onclick="hideNotificationsToast()">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="javascript:requestNotificationPermission()">Lembrador de Contas</a>
+  <a class="navbar-brand" href="/">Lembrador de Contas</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
