--- a/volumes/lembrador-contas/src/views/templates/scripts.html
+++ b/volumes/lembrador-contas/src/views/templates/scripts.html
@@ -1,20 +1,30 @@
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src='/service-worker.js'></script>
 <script>
+   if (Notification.permission == 'default') {
+      $('.toast').toast({autohide: false})
+      $('#notifications-toast-container').css("display", "block");
+      $('#notifications-toast').toast('show')
+   }
+
+   function hideNotificationsToast() {
+      $('#notifications-toast-container').remove()
+   }
+   
+
    function requestNotificationPermission() {
+      hideNotificationsToast()
       Notification.requestPermission().then(res => {
-         if(Notification.permission=='granted') {
+         if(Notification.permission == 'granted') {
             console.log("Granted permission")
+            showNotification()
             return
          }
          console.log(res)
-         showNotification()
       })
-
-      showNotification()
    }
 
    function showNotification() {
